Update to docker 1.10, adds separate dhcp server, and files containers

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,8 @@
 .vagrant
+docker/dhcp/leases
+docker/files/mount
+docker/tls/*.pem
+docker/tls/hostnames
 example/config/monorail_rack.cfg
 example/bin/pxe*
 *.vdi
