--- a/docker/Vagrantfile
+++ b/docker/Vagrantfile
@@ -3,10 +3,10 @@
 VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-
     # Boot 2 Docker
     config.vm.define "b2d" do |target|
-        target.vm.box = "blinkreaction/boot2docker"
+        target.vm.box = "dduportal/boot2docker"
+
         target.vm.provider "virtualbox" do |v|
             v.memory = 4096
             v.cpus = 4
@@ -15,20 +15,23 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         end
 
         target.vm.network "private_network", ip: "172.31.128.1", virtualbox__intnet: "closednet"
-        target.vm.network "forwarded_port", guest: 27017, host: 27017
 
-        target.vm.network "forwarded_port", guest: 15672, host: 15672
-        target.vm.network "forwarded_port", guest: 5672, host: 5672
-
-        target.vm.network "forwarded_port", guest: 5601, host: 5601
-
-        target.vm.network "forwarded_port", guest: 8080, host: 9090
-        target.vm.network "forwarded_port", guest: 8090, host: 9091
-
-        target.vm.network "forwarded_port", guest: 9200, host: 9200
-        target.vm.network "forwarded_port", guest: 9300, host: 9300
+        target.vm.network "forwarded_port", guest: 27017, host: 27017, id: "Mongo DB"
+        target.vm.network "forwarded_port", guest: 15672, host: 15672, id: "RabbitMQ Management"
+        target.vm.network "forwarded_port", guest: 5672, host: 5672, id: "RabbitMQ AMQP"
+        target.vm.network "forwarded_port", guest: 5601, host: 5601, id: "Kibana UI"
+        target.vm.network "forwarded_port", guest: 9090, host: 9090, id: "RackHD Northbound API"
+        target.vm.network "forwarded_port", guest: 9080, host: 9080, id: "RackHD Southbound API"
+        target.vm.network "forwarded_port", guest: 9200, host: 9200, id: "Elasticsearch REST API"
+        target.vm.network "forwarded_port", guest: 9300, host: 9300, id: "Elasticsearch Native"
 
         target.vm.synced_folder "..", "/RackHD"
-        config.vm.synced_folder '.', '/vagrant', disabled: true
+        target.vm.synced_folder '.', '/vagrant', disabled: true
+        # target.vm.synced_folder ".", Dir.pwd, disabled: true
+
+        target.vm.provision :shell, inline: <<-SHELL
+          sudo /etc/init.d/docker restart
+          sudo cp -r /var/lib/boot2docker/tls /RackHD/docker/
+        SHELL
     end
 end
