--- a/docker/logstash/config/logstash.conf
+++ b/docker/logstash/config/logstash.conf
@@ -2,7 +2,7 @@
 
 input {
   rabbitmq {
-    host => "172.31.128.1"
+    host => "127.0.0.1"
     exchange => "on.logging"
     key => "#"
   }
@@ -13,6 +13,6 @@ input {
 
 output {
   elasticsearch {
-    hosts => "elasticsearch:9200"
+    hosts => "127.0.0.1:9200"
   }
 }
