updating ansible role to place correct file

--- a/packer/ansible/roles/monorail/tasks/main.yml
+++ b/packer/ansible/roles/monorail/tasks/main.yml
@@ -4,5 +4,5 @@
   sudo: yes
 
 - name: Load monorail conf onto guest
-  copy: src=monorail.json dest=/opt/monorail/config.json
+  copy: src=config.json dest=/opt/monorail/config.json
   sudo: yes
