--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -47,6 +47,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         target.vm.network "forwarded_port", guest: 8080, host: 9090
         target.vm.network "forwarded_port", guest: 5672, host: 9091
         target.vm.network "forwarded_port", guest: 9080, host: 9092
+        target.vm.network "forwarded_port", guest: 8443, host: 9093
 
         # If true, then any SSH connections made will enable agent forwarding.
         # Default value: false
