--- a/test/requirements.txt
+++ b/test/requirements.txt
@@ -5,5 +5,5 @@ logging==0.4.9.6
 proboscis==1.2.6.0
 requests==2.9.0
 nose==1.3.7
-on-http>=1.0.0
+on-http_api1_1>=1.0.0
 on_http_redfish_1_0>=1.0.0
