swagger and integration test setup for local dev usage

--- a/packer/ansible/rackhd_local.yml
+++ b/packer/ansible/rackhd_local.yml
@@ -16,6 +16,8 @@
     - foreman
     - remoterepos
     - images
+    - swagger
+    - integrationtest
   vars:
 # branch of https://github.com/rackhd/rackhd to be used
     - branch: "master"
