--- a/packer/ansible/roles/images/tasks/main.yml
+++ b/packer/ansible/roles/images/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 - name: retrieve microkernel and overlays from bintray
   get_url: url="https://bintray.com/artifact/download/rackhd/binary/builds/{{ item }}"
-           dest="/home/vagrant/src/on-http/static/http/common/{{ item }}"
+           dest="{{ ansible_env.HOME }}/src/on-http/static/http/common/{{ item }}"
            validate_certs=no
            force=yes
   with_items:
@@ -12,7 +12,7 @@
 
 - name: retrieve the latest bootloaders from bintray
   get_url: url="https://bintray.com/artifact/download/rackhd/binary/ipxe/{{ item }}"
-           dest="/home/vagrant/src/on-tftp/static/tftp/{{ item }}"
+           dest="{{ ansible_env.HOME }}/src/on-tftp/static/tftp/{{ item }}"
            validate_certs=no
            force=yes
   with_items:
@@ -22,7 +22,7 @@
 
 - name: retrieve the latest syslinux bootloader from bintray
   get_url: url="https://bintray.com/artifact/download/rackhd/binary/syslinux/{{ item }}"
-           dest="/home/vagrant/src/on-tftp/static/tftp/{{ item }}"
+           dest="{{ ansible_env.HOME }}/src/on-tftp/static/tftp/{{ item }}"
            validate_certs=no
            force=yes
   with_items:
