--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -1,12 +1,41 @@
 ---
 - name: Get RackHD from source
   git: repo=https://github.com/rackhd/rackhd
-       dest=/home/vagrant/src
+       dest="{{ ansible_env.HOME }}/src"
        accept_hostkey=true
        version="{{ branch | default('master') }}"
 
+- name: Update git repos with latest
+  shell: git fetch --all --prune
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
+  with_items:
+    - on-core
+    - on-tasks
+    - on-http
+    - on-tftp
+    - on-dhcp-proxy
+    - on-taskgraph
+    - on-syslog
+  sudo: yes
+
+- name: Reset to the branch specified
+  shell: git reset --hard {{ branch }}
+  when: branch is defined
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/{{ item }}"
+  with_items:
+    - on-core
+    - on-tasks
+    - on-http
+    - on-tftp
+    - on-dhcp-proxy
+    - on-taskgraph
+    - on-syslog
+  sudo: yes
+
 - name: Npm install Repos
-  npm: path="/home/vagrant/src/{{ item }}"
+  npm: path="{{ ansible_env.HOME }}/src/{{ item }}"
        production=yes
   with_items:
     - on-syslog
@@ -16,14 +45,14 @@
     - on-http
 
 - name: Make common static directory
-  file: path=/home/vagrant/src/on-http/static/http/common state=directory
+  file: path="{{ ansible_env.HOME }}/src/on-http/static/http/common" state=directory
 
 - name: Npm install apidoc
-  shell: 'npm install apidoc'
+  shell: "npm install apidoc"
   args:
-    chdir: /home/vagrant/src/on-http
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
 
 - name: Render API docs for local reference
-  shell: 'npm run apidoc'
+  shell: "npm run apidoc"
   args:
-    chdir: /home/vagrant/src/on-http
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
