adding package-based installation
 - added template-packages.json to build RackHD image from debian
   packages
 - added roles for package based installation
 - updated README for details on how to run (variables needed for ATLAS)
 - changed default values in post-processor to run from env variables
   (NOTE: THIS BREAKS the `package push...` build model, since it
   doesn't have those variables locally in remote builds,  but given
   that feature is going away for "free" use, I'm thinking we dont need
   to maintain that functionality.

--- a/packer/ansible/roles/node-legacy/tasks/main.yml
+++ b/packer/ansible/roles/node-legacy/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install Build Tools
+- name: Install NodeJS Packages
   apt: pkg={{ item }} state=installed
   with_items:
     - nodejs
