--- a/packer/ansible/roles/rackhd-packages/tasks/main.yml
+++ b/packer/ansible/roles/rackhd-packages/tasks/main.yml
@@ -5,6 +5,7 @@
 
 # apt_repository apparently requires this to run in Ansible 1.5
 - apt: pkg=python-pycurl state=present
+  sudo: yes
 
 - apt_repository: repo="deb https://dl.bintray.com/rackhd/debian trusty main"
                   state=present
