--- a/packer/ansible/roles/rackhd-packages/tasks/main.yml
+++ b/packer/ansible/roles/rackhd-packages/tasks/main.yml
@@ -29,3 +29,9 @@
     - on-tftp
     - on-syslog
   sudo: yes
+
+- name: set HTTP static directory for RackHD
+  set_fact: http_static_directory="/var/renasar/on-http/static/http"
+
+- name: set TFTP static directory for RackHD
+  set_fact: tftp_static_directory="/var/renasar/on-tftp/static/tftp"
