update example/ to use InfraSim
- virtual SKU definitions added
- example CentOS install workflow for SKU
- updated README with InfraSim how to details

--- a/example/Vagrantfile
+++ b/example/Vagrantfile
@@ -15,12 +15,21 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
             v.customize ["modifyvm", :id, "--nicpromisc2", "allow-all", "--ioapic", "on"]
         end
 
+        # NOTE: virtualbox shared folder syncing can be quite slow, but shared folders
+        # can be configured as NFS mounts to the host instead.
+        # To do so, append: `, type: "nfs"` to all of the target.vm.synced_folder commands
+        # below, then on the host system, run `sudo nfsd start`.
+        # Additionally, uncomment the below configuration:
+
+        # For NFS mounts, a host only network is needed. Feel free to change the IP.
+        # target.vm.network "private_network", ip: "192.168.50.4"
+
         # Sync optional local workspace directory to the vagrant instances src/ path.
         # REPO is optional when WORKSPACE is defined, used for synchronizing single RackHD repos
         # otherwise it assumes all service repos have been cloned and built under the WORKSPACE path.
         # NOTE: See further below for instructions on how to use an NFS mount for faster synced file performance
         if ENV['WORKSPACE']
-	  if ENV['REPO'] == "on-tasks"
+          if ENV['REPO'] == "on-tasks"
             target.vm.synced_folder "#{ENV['WORKSPACE']}/#{ENV['REPO']}", "/home/vagrant/src/on-taskgraph/node_modules/on-tasks/"
             target.vm.synced_folder "#{ENV['WORKSPACE']}/#{ENV['REPO']}", "/home/vagrant/src/on-http/node_modules/on-tasks/"
           elsif ENV['REPO'] == "on-core"
@@ -55,7 +64,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         target.vm.network "forwarded_port", guest: 8443, host: 9093
 
         # NOTE: virtualbox shared folder syncing can be quite slow, but shared folders
-        # can be configured as NFS mounts to the host instead. 
+        # can be configured as NFS mounts to the host instead.
         # To do so, append: `, type: "nfs"` to all of the target.vm.synced_folder commands
         # below, then on the host system, run `sudo nfsd start`.
         # Additionally, uncomment the below configuration:
@@ -72,6 +81,25 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
         #   service rsyslog stop
         #   echo manual | sudo tee /etc/init/rsyslog.override
         SHELL
-
     end
+
+    # Virtual HW SERVER
+    config.vm.define "quanta_d51" do |target|
+        target.vm.box = "InfraSIM/quanta_d51"
+        target.vm.provider "virtualbox" do |v|
+            v.gui = true
+            v.memory = 4096
+            v.cpus = 4
+            v.customize ["modifyvm", :id, "--nicpromisc2", "allow-all", "--ioapic", "on"]
+        end
+        #target.vm.network :public_network
+        target.vm.network "private_network", virtualbox__intnet: "closednet", auto_config: false, nic_type: "82540EM"
+        target.vm.provision "shell", inline: <<-SHELL
+            sudo ifconfig eth1 up
+            sleep 2
+            sudo udhcpc -i br1
+        SHELL
+    end
+
+
 end
