--- a/test/benchmark/utils/ansible/setup_env.yml
+++ b/test/benchmark/utils/ansible/setup_env.yml
@@ -23,6 +23,12 @@
       copy: src={{ lookup('env', 'HOME') }}/.ssh/id_rsa.pub
             dest=/tmp/
 
+    - name: Copy RackHD/on-tools into /tmp/on-tools
+      git: repo=https://github.com/RackHD/on-tools.git
+           dest=/tmp/on-tools/
+           accept_hostkey=true
+           version="{{ branch | default('master') }}"
+
 - hosts: rackhd
   vars_files:
     - vars/setup.yml
