fixing pathing for pxe, adding Dockerfile

--- a/packer/ansible/roles/images/tasks/main.yml
+++ b/packer/ansible/roles/images/tasks/main.yml
@@ -19,7 +19,7 @@
    - vmlinuz-3.16.0-25-generic
 
 - name: retrieve the latest bootloaders from bintray
-  get_url: url="https://dl.bintray.com/rackhd/binary/builds/:{{ item }}"
+  get_url: url="https://dl.bintray.com/rackhd/binary/ipxe/:{{ item }}"
            dest="{{ tftp_static_directory }}/{{ item }}"
            validate_certs=no
            force=yes
@@ -30,7 +30,7 @@
    - monorail-efi64-snponly.efi
 
 - name: retrieve the latest syslinux bootloader from bintray
-  get_url: url="https://dl.bintray.com/rackhd/binary/builds/:{{ item }}"
+  get_url: url="https://dl.bintray.com/rackhd/binary/syslinux/:{{ item }}"
            dest="{{ tftp_static_directory }}/{{ item }}"
            validate_certs=no
            force=yes
