Updates RackHD docker example to include on-wss module

--- a/.gitmodules
+++ b/.gitmodules
@@ -28,3 +28,6 @@
 [submodule "on-tools"]
 	path = on-tools
 	url = https://github.com/RackHD/on-tools
+[submodule "on-wss"]
+	path = on-wss
+	url = https://github.com/RackHD/on-wss
