Add and setup PostgreSQL backend services

--- a/packer/ansible/rackhd_local.yml
+++ b/packer/ansible/rackhd_local.yml
@@ -18,6 +18,7 @@
     - images
     - swagger
     - integrationtest
+    - postgresql
   vars:
 # branch of https://github.com/rackhd/rackhd to be used
     - branch: "master"
