packer vagrant box based on node 4 and support ubuntu 16.04

--- a/packer/ansible/roles/node/tasks/main.yml
+++ b/packer/ansible/roles/node/tasks/main.yml
@@ -1,15 +1,10 @@
 ---
-- name: Download n Installer
-  get_url: url=http://git.io/n-install dest=/tmp/n-install mode=0755
-  register: download_n
-  sudo: yes
 
-- name: Install n
-  shell: "yes | N_PREFIX={{ ansible_env.HOME }}/n /tmp/n-install"
-  sudo: yes
-  when: download_n|changed
+- name: Setup nodejs source for installing node v4 
+  shell: curl -sL https://deb.nodesource.com/setup_4.x | sudo -E bash -
 
-- name: Install node
-  shell: "{{ ansible_env.HOME }}/n/bin/n {{ node_version | default('0.10.37') }}"
+- name: Install node v4
+  apt: pkg={{ item }} state=installed
+  with_items:
+    - nodejs
   sudo: yes
-  when: download_n|changed
