--- a/packer/ansible/rackhd_local.yml
+++ b/packer/ansible/rackhd_local.yml
@@ -8,7 +8,7 @@
     - git
     - rabbitmq
     - mongodb
-    - node-legacy
+    - node
     - isc-dhcp-server
     - monorail
     - snmptool
@@ -21,5 +21,3 @@
   vars:
 # branch of https://github.com/rackhd/rackhd to be used
     - branch: "master"
-# version of Node.js to use
-    - node_version: "0.10.41"
