--- a/packer/ansible/roles/isc-dhcp-server/tasks/main.yml
+++ b/packer/ansible/roles/isc-dhcp-server/tasks/main.yml
@@ -8,6 +8,17 @@
 - name: Copy isc-dhcp-server file to guest
   copy: src=isc-dhcp-server dest=/etc/default/isc-dhcp-server
   sudo: yes
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version | int < 16
+
+- name: Copy systemd control network interface file to guest
+  copy: src=systemd-control.cfg dest=/etc/network/interfaces.d/control.cfg
+  sudo: yes
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version | int >= 16
+
+- name: Copy systemd isc-dhcp-server file to guest
+  copy: src=systemd-isc-dhcp-server dest=/etc/default/isc-dhcp-server
+  sudo: yes
+  when: ansible_distribution == "Ubuntu" and ansible_distribution_version | int >= 16
 
 - name: Copy dhcpd.conf file to guest
   copy: src=dhcpd.conf dest=/etc/dhcp/dhcpd.conf
