--- a/test/config/config.ini
+++ b/test/config/config.ini
@@ -17,10 +17,10 @@ RACKHD_BASE_REPO_URL = http://172.31.128.1:8080
 ; These are OS specific repository paths, which are optional 
 ; however OS installer tests will default to RACKHD_BASE_REPO_URL 
 ; if undefined
-RACKHD_CENTOS_REPO_PATH = http://172.31.128.1:8080/repo/centos
-RACKHD_ESXI_REPO_PATH = http://172.31.128.1:8080/repo/esxi
-RACKHD_UBUNTU_REPO_PATH = http://172.31.128.1:8080/repo/ubuntu
-RACKHD_SUSE_REPO_PATH = http://172.31.128.1:8080/suse
+; RACKHD_CENTOS_REPO_PATH = http://172.31.128.1:8080/repo/centos
+; RACKHD_ESXI_REPO_PATH = http://172.31.128.1:8080/repo/esxi
+; RACKHD_UBUNTU_REPO_PATH = http://172.31.128.1:8080/repo/ubuntu
+; RACKHD_SUSE_REPO_PATH = http://172.31.128.1:8080/suse
 
 ; Defines Redfish service endpoints
 ; RACKHD_REDFISH_URL = https://192.168.1.100/redfish/v1
