Add Domain name and routers options to DHCP
- Required in Ubuntu netboot installtion

--- a/packer/ansible/roles/isc-dhcp-server/files/dhcpd.conf
+++ b/packer/ansible/roles/isc-dhcp-server/files/dhcpd.conf
@@ -111,6 +111,9 @@ deny duplicates;
 
 ignore-client-uids true;
 
+option domain-name-servers 172.31.128.1;
+option routers 172.31.128.254;
+
 subnet 172.31.128.0 netmask 255.255.252.0 {
  range 172.31.128.2 172.31.131.254;
  # Use this option to signal to the PXE client that we are doing proxy DHCP
