--- a/packer/ansible/rackhd_package.yml
+++ b/packer/ansible/rackhd_package.yml
@@ -8,7 +8,7 @@
     - git
     - rabbitmq
     - mongodb
-    - node-legacy
+    - node
     - rackhd-packages
     - isc-dhcp-server
     - monorail
