adding libkrb5-dev library for NPM instal
 - needed for on-http install during source installation now

--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -1,4 +1,9 @@
 ---
+- name: install dev libraries for NPM installs
+  apt: pkg={{ item }} state=installed
+  with_items:
+    - libkrb5-dev
+
 - name: Get RackHD from source
   git: repo=https://github.com/rackhd/rackhd
        dest="{{ ansible_env.HOME }}/src"
