adding on-wss to ansible/vagrant setup

--- a/packer/ansible/roles/foreman/files/.env
+++ b/packer/ansible/roles/foreman/files/.env
@@ -5,3 +5,4 @@ HTTPDIR="$BASEPATH/on-http"
 DHCPDIR="$BASEPATH/on-dhcp-proxy"
 TFTPDIR="$BASEPATH/on-tftp"
 SYSLOGDIR="$BASEPATH/on-syslog"
+WSSDIR="$BASEPATH/on-wss"
