--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -17,6 +17,7 @@
     - on-dhcp-proxy
     - on-taskgraph
     - on-syslog
+    - on-wss
 
 - name: Reset to the branch specified
   shell: git reset --hard {{ branch }}
@@ -31,6 +32,7 @@
     - on-dhcp-proxy
     - on-taskgraph
     - on-syslog
+    - on-wss
 
 - name: Npm install Repos
   npm: path="{{ ansible_env.HOME }}/src/{{ item }}"
@@ -41,6 +43,7 @@
     - on-dhcp-proxy
     - on-taskgraph
     - on-http
+    - on-wss
 
 - name: Make common static directory
   file: path="{{ ansible_env.HOME }}/src/on-http/static/http/common" state=directory
