Install libkrb5-dev package as sudo

--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -3,6 +3,7 @@
   apt: pkg={{ item }} state=installed
   with_items:
     - libkrb5-dev
+  sudo: yes
 
 - name: Get RackHD from source
   git: repo=https://github.com/rackhd/rackhd
