--- a/packer/ansible/roles/rackhd-packages/tasks/main.yml
+++ b/packer/ansible/roles/rackhd-packages/tasks/main.yml
@@ -1,37 +1,39 @@
 ---
-# vagrant ansible uses 1.5, which doesn't have the keyserver option enabled
-- shell: "apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 379CE192D401AB61"
-  sudo: yes
+- name: Ensure rackhd bintray key
+  apt_key: id={{ rackhd_key_id }} keyserver={{ rackhd_keyserver }} state=present
+  tags:
+    - rackhd
 
-# apt_repository apparently requires this to run in Ansible 1.5
-- apt: pkg=python-pycurl state=present
-  sudo: yes
+- name: Create the rackhd bintray repo
+  apt_repository: repo="{{ rackhd_repo }}" state=present
+  tags:
+    - rackhd
 
-- apt_repository: repo="deb https://dl.bintray.com/rackhd/debian trusty main"
-                  state=present
-  sudo: yes
+- name: Install rackhd packages
+  apt: name={{item}} state=installed
+  with_items: "{{ rackhd_packages }}"
+  tags:
+    - rackhd
 
-- name: Install RackHD Packages
-  apt: pkg="{{ item }}" state=latest
-  with_items:
-    - on-dhcp-proxy
-    - on-http
-    - on-taskgraph
-    - on-tftp
-    - on-syslog
-  sudo: yes
+- name: rackhd default service files
+  copy: content="" dest=/etc/default/{{item}} force=no
+  with_items: "{{ rackhd_services }}"
+  tags:
+    - rackhd
 
-- file: path="/etc/default/{{ item }}" state=touch
-  with_items:
-    - on-dhcp-proxy
-    - on-http
-    - on-taskgraph
-    - on-tftp
-    - on-syslog
-  sudo: yes
+- name: rackhd start services
+  service: name={{ item }} state=started enabled=yes
+  with_items: "{{ rackhd_services }}"
+  tags:
+    - rackhd
 
 - name: set HTTP static directory for RackHD
-  set_fact: http_static_directory="/var/renasar/on-http/static/http"
+  set_fact: http_static_directory="{{ rackhd_http_static_directory }}"
+  tags:
+    - rackhd
 
 - name: set TFTP static directory for RackHD
-  set_fact: tftp_static_directory="/var/renasar/on-tftp/static/tftp"
+  set_fact: tftp_static_directory="{{ rackhd_tftp_static_directory }}"
+  tags:
+    - rackhd
+
