--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -69,6 +69,12 @@
   args:
     chdir: "{{ ansible_env.HOME }}/src/on-http"
 
+#workaround for https://github.com/RackHD/RackHD/issues/357
+- name: install dev dependencies for on-http to allow taskdoc to work
+  shell: "npm install"
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
+
 - name: Generate hosted task documentation
   shell: "npm run taskdoc"
   args:
