--- a/test/config/config.ini
+++ b/test/config/config.ini
@@ -13,6 +13,9 @@ RACKHD_SSH_PORT = 2222
 RACKHD_USER_AUTH_PORT = 8443
 RACKHD_GLOBAL_OBM_SERVICE_NAME = ipmi-obm-service
 RACKHD_BASE_REPO_URL = http://172.31.128.1:8080
+RACKHD_SMB_USER =   onrack
+RACKHD_SMB_PASSWORD =   onrack
+RACKHD_SMB_WINDOWS_REPO_PATH = \\172.31.128.1\windowsServer2012
 
 ; These are OS specific repository paths, which are optional 
 ; however OS installer tests will default to RACKHD_BASE_REPO_URL 
@@ -20,7 +23,8 @@ RACKHD_BASE_REPO_URL = http://172.31.128.1:8080
 ; RACKHD_CENTOS_REPO_PATH = http://172.31.128.1:8080/repo/centos
 ; RACKHD_ESXI_REPO_PATH = http://172.31.128.1:8080/repo/esxi
 ; RACKHD_UBUNTU_REPO_PATH = http://172.31.128.1:8080/repo/ubuntu
-; RACKHD_SUSE_REPO_PATH = http://172.31.128.1:8080/suse
+; RACKHD_SUSE_REPO_PATH = http://172.31.128.1:8080/repo/suse
+; RACKHD_WINPE_REPO_PATH = http://172.31.128.1:8080/repo/winpe
 
 ; Defines Redfish service endpoints
 ; RACKHD_REDFISH_URL = https://192.168.1.100/redfish/v1
