--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -71,6 +71,8 @@
 
 - name: Npm install supertest
   shell: "npm install supertest"
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
 	
 - name: Generate hosted task documentation
   shell: "npm run taskdoc"
