Install sinon package

--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -74,6 +74,11 @@
   args:
     chdir: "{{ ansible_env.HOME }}/src/on-http"
 
+- name: Npm install sinon
+  shell: "npm install sinon"
+  args:
+    chdir: "{{ ansible_env.HOME }}/src/on-http"
+
 - name: Generate hosted task documentation
   shell: "npm run taskdoc"
   args:
