--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -77,6 +77,7 @@
     - supertest
     - sinon
     - sinon-as-promised
+    - chai
 
 - name: Generate hosted task documentation
   shell: "npm run taskdoc"
