adding sinon-chai

--- a/packer/ansible/roles/remoterepos/tasks/main.yml
+++ b/packer/ansible/roles/remoterepos/tasks/main.yml
@@ -79,6 +79,7 @@
     - sinon-as-promised
     - chai
     - chai-as-promised
+    - sinon-chai
 
 - name: Generate hosted task documentation
   shell: "npm run taskdoc"
