Enable auth by default in vagrant instance
- Create users
- modify users
- remove users
- Test Privileges

--- a/packer/ansible/roles/monorail/files/config.json
+++ b/packer/ansible/roles/monorail/files/config.json
@@ -14,7 +14,7 @@
             "port": 8080,
             "httpsEnabled": false,
             "proxiesEnabled": true,
-            "authEnabled": false,
+            "authEnabled": true,
             "routers": "northbound-api-router"
         },
         {
