Get CoreOS minimal payload from sample file

--- a/test/config/config.ini
+++ b/test/config/config.ini
@@ -16,6 +16,7 @@ RACKHD_BASE_REPO_URL = http://172.31.128.1:8080
 RACKHD_SMB_USER =   onrack
 RACKHD_SMB_PASSWORD =   onrack
 RACKHD_SMB_WINDOWS_REPO_PATH = \\172.31.128.1\windowsServer2012
+RACKHD_SAMPLE_PAYLOADS_PATH = ../example/samples/
 
 ; These are OS specific repository paths, which are optional 
 ; however OS installer tests will default to RACKHD_BASE_REPO_URL 
