include dell ansible role in local.yml

--- a/packer/ansible/rackhd_local.yml
+++ b/packer/ansible/rackhd_local.yml
@@ -19,6 +19,7 @@
     - swagger
     - integrationtest
     - postgresql
+    - dell
   vars:
 # branch of https://github.com/rackhd/rackhd to be used
     - branch: "master"
